<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="com.example.android.musical.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tracks_card_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            card_view:cardBackgroundColor="@android:color/holo_green_light"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/tracks_image"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:alpha="1.0"
                    android:paddingTop="20dp"
                    android:src="@drawable/ic_music_note_black_24dp" />

                <TextView
                    style="@style/song_name_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tracks_image"
                    android:layout_centerHorizontal="true"
                    android:text="@string/songs"
                    android:textAllCaps="true" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/albums_card_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            card_view:cardBackgroundColor="@android:color/holo_blue_dark"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/albums_image"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:alpha="1.0"
                    android:paddingTop="20dp"
                    android:src="@drawable/ic_album_black_24dp" />

                <TextView
                    style="@style/song_name_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/albums_image"
                    android:layout_centerHorizontal="true"
                    android:text="@string/albums"
                    android:textAllCaps="true" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/artists_card_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            card_view:cardBackgroundColor="@android:color/holo_red_light"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/artist_image"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:alpha="1.0"
                    android:paddingTop="20dp"
                    android:src="@drawable/ic_assignment_ind_black_24dp" />

                <TextView
                    style="@style/song_name_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/artist_image"
                    android:layout_centerHorizontal="true"
                    android:text="@string/artist"
                    android:textAllCaps="true" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/genres_card_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            card_view:cardBackgroundColor="@android:color/holo_orange_light"
            card_view:cardCornerRadius="6dp"
            card_view:cardElevation="10dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/genres_image"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:alpha="1.0"
                    android:paddingTop="20dp"
                    android:src="@drawable/ic_pages_black_24dp" />

                <TextView
                    style="@style/song_name_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/genres_image"
                    android:layout_centerHorizontal="true"
                    android:text="@string/genre"
                    android:textAllCaps="true" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</LinearLayout>